# rag-agent-book

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
chapter/chapter02/: notebook.ipynb
chapter/chapter03/: notebook.ipynb  requirements.txt
chapter/chapter04/: notebook.ipynb  requirements.txt
chapter/chapter05/: notebook.ipynb  requirements.txt
chapter/chapter06/: notebook.ipynb  requirements.txt
chapter/chapter07/: notebook.ipynb  requirements.txt
chapter/chapter09/: notebook.ipynb  requirements.txt
chapter/chapter10/: .env.sample  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
chapter/chapter10/documentation_agent/: main.py
chapter/chapter12/: .env.sample  notebook.ipynb  pyproject.toml  requirements.txt  run_and_report.sh  settings.py
chapter/chapter12/common/: reflection_manager.py
chapter/chapter12/cross_reflection/: main.py
chapter/chapter12/multi_path_plan_generation/: main.py
chapter/chapter12/passive_goal_creator/: main.py
chapter/chapter12/prompt_optimizer/: main.py
chapter/chapter12/response_optimizer/: main.py
chapter/chapter12/role_based_cooperation/: main.py
chapter/chapter12/self_reflection/: main.py
chapter/chapter12/single_path_plan_generation/: main.py
