[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==1.40.6",
    "tiktoken==0.7.0",
    "httpx==0.27.2",
    "jupyter>=1.1.1",
    "langchain-core==0.2.30",
    "langchain-openai==0.1.21",
    "langchain-community==0.2.12",
    "GitPython==3.1.43",
    "langchain-chroma==0.1.4",
    "tavily-python==0.5.0",
    "rank-bm25>=0.2.2",
    "nest-asyncio==1.6.0",
    "ragas==0.1.14",
    "chromadb>=0.5.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.isort]

[tool.mypy]
ignore_missing_imports = true
